bookapp-old-version/ingress/templates/ingress.yaml
---
# Source: bookapp/charts/ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookapp-ingress
  labels:
    helm.sh/chart: ingress-0.1.0
    app.kubernetes.io/name: ingress
    app.kubernetes.io/instance: bookapp
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx
  rules:
    - host: "bookapp.prod.devops.tentech.projects.apex-consulting.io"
      http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: books
                port:
                  number: 8002
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8001
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
